force-app/main/default/objects/DID__c/DID__c.object-meta.xml
<CustomObject>
    <label>DID</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}:{00}</displayFormat>
        <label>DID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DIDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>