force-app/main/default/objects/DID__c/fields/Create_Incontact__c.field-meta.xml
<CustomField>
    <fullName>Create_Incontact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Incontact</label>
    <type>Checkbox</type>
</CustomField>