force-app/main/default/objects/DID__c/fields/CSS_Verified__c.field-meta.xml
<CustomField>
    <fullName>CSS_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSS Verified</label>
    <type>Checkbox</type>
</CustomField>