force-app/main/default/objects/DID__c/fields/CSS_Verified_by__c.field-meta.xml
<CustomField>
    <fullName>CSS_Verified_by__c</fullName>
    <label>CSS Verified by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>