force-app/main/default/objects/DID__c/fields/Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Deactivated__c</fullName>
    <formula>IF( Opportunity_Stage__c = &quot;Deactivated Customer&quot; , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deactivated</label>
    <type>Checkbox</type>
</CustomField>