force-app/main/default/objects/DID__c/fields/Destination_Number__c.field-meta.xml
<CustomField>
    <fullName>Destination_Number__c</fullName>
    <description>10 digit phone number without the country code to where the phone calls will be routed to.</description>
    <inlineHelpText>10 digit phone number without the country code to where the phone calls will be routed to.</inlineHelpText>
    <label>Destination Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>