force-app/main/default/objects/DID__c/fields/DID_Notes__c.field-meta.xml
<CustomField>
    <fullName>DID_Notes__c</fullName>
    <label>DID Notes</label>
    <type>TextArea</type>
</CustomField>