force-app/main/default/objects/DID__c/fields/DID_Type__c.field-meta.xml
<CustomField>
    <fullName>DID_Type__c</fullName>
    <label>DID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>nuHome Door Tag Script</fullName>
            </value>
            <value>
                <fullName>nuHome nuCard SUB</fullName>
            </value>
            <value>
                <fullName>nuHome SPEC CPL</fullName>
            </value>
            <value>
                <fullName>Special Routing</fullName>
            </value>
            <value>
                <fullName>nuHome nuCard SPEC</fullName>
            </value>
            <value>
                <fullName>nuHome OB Campaign</fullName>
            </value>
            <value>
                <fullName>nuHome nuCard CPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>