force-app/main/default/objects/DID__c/fields/Door_Tag_Branch__c.field-meta.xml
<CustomField>
    <fullName>Door_Tag_Branch__c</fullName>
    <label>Door Tag Branch</label>
    <length>200</length>
    <type>Text</type>
</CustomField>