force-app/main/default/objects/DID__c/fields/fBilling_Opportunity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>fBilling_Opportunity_Lookup__c</fullName>
    <formula>Lead_Distribution__r.fBilling_Opportunity_Lookup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fBilling Opportunity Lookup</label>
    <type>Text</type>
</CustomField>