force-app/main/default/objects/DID__c/fields/fBranch__c.field-meta.xml
<CustomField>
    <fullName>fBranch__c</fullName>
    <formula>Opportunity__r.Branch_Object__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fBranch</label>
    <type>Text</type>
</CustomField>