force-app/main/default/objects/DID__c/fields/fDestination_Number__c.field-meta.xml
<CustomField>
    <fullName>fDestination_Number__c</fullName>
    <formula>Opportunity__r.Forward_to_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fDestination Number</label>
    <type>Text</type>
</CustomField>