force-app/main/default/objects/DID__c/fields/fDID__c.field-meta.xml
<CustomField>
    <fullName>fDID__c</fullName>
    <formula>Opportunity__r.DID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fDID</label>
    <type>Text</type>
</CustomField>