force-app/main/default/objects/DID__c/fields/fopportunity_Account__c.field-meta.xml
<CustomField>
    <fullName>fopportunity_Account__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fopportunity Account</label>
    <type>Text</type>
</CustomField>