force-app/main/default/objects/DID__c/fields/fOpportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>fOpportunity_Record_Type__c</fullName>
    <formula>Opportunity__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOpportunity Record Type</label>
    <type>Text</type>
</CustomField>