force-app/main/default/objects/DID__c/fields/Forward_Status__c.field-meta.xml
<CustomField>
    <fullName>Forward_Status__c</fullName>
    <label>Forward Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unverified</fullName>
                <default>true</default>
                <label>Unverified</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Broken</fullName>
            </value>
            <value>
                <fullName>Deactivated Customer</fullName>
            </value>
            <value>
                <fullName>Swapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>