force-app/main/default/objects/DID__c/fields/Forward_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Forward_Verified_By__c</fullName>
    <label>Forward Verified By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>