force-app/main/default/objects/DID__c/fields/Lead_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Lead_Distribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Distribution</label>
    <referenceTo>Lead_Distribution__c</referenceTo>
    <relationshipLabel>DIDs</relationshipLabel>
    <relationshipName>DIDs</relationshipName>
    <type>Lookup</type>
</CustomField>