force-app/main/default/objects/DID__c/fields/Number_Released__c.field-meta.xml
<CustomField>
    <fullName>Number_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Number Released</label>
    <type>Checkbox</type>
</CustomField>