force-app/main/default/objects/DID__c/fields/OB_Campaign_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Call_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OB Campaign Call Center</label>
    <referenceTo>OB_Campaign_Call_Center__c</referenceTo>
    <relationshipLabel>DIDs</relationshipLabel>
    <relationshipName>DIDs</relationshipName>
    <type>Lookup</type>
</CustomField>