force-app/main/default/objects/DID__c/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <description>10 digit DID or ANI without the country code</description>
    <inlineHelpText>10 digit DID or ANI without the country code</inlineHelpText>
    <label>POC</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>