force-app/main/default/objects/DID__c/fields/Responsible_Organization__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Organization__c</fullName>
    <label>Responsible Organization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plivo</fullName>
            </value>
            <value>
                <fullName>inContact</fullName>
            </value>
            <value>
                <fullName>Twilio</fullName>
                <default>true</default>
                <label>Twilio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>