force-app/main/default/objects/DID__c/fields/Resporg_Completed__c.field-meta.xml
<CustomField>
    <fullName>Resporg_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resporg Completed</label>
    <type>Checkbox</type>
</CustomField>