force-app/main/default/objects/DID__c/fields/Resporg_Estimated_Completion__c.field-meta.xml
<CustomField>
    <fullName>Resporg_Estimated_Completion__c</fullName>
    <label>Resporg Estimated Completion</label>
    <type>Date</type>
</CustomField>