force-app/main/default/objects/DID__c/fields/Resporg_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Resporg_Initiated__c</fullName>
    <label>Resporg Initiated</label>
    <type>Date</type>
</CustomField>