force-app/main/default/objects/DID__c/fields/SF_18_Digit_ID_del__c.field-meta.xml
<CustomField>
    <fullName>SF_18_Digit_ID_del__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF 18 Digit ID</label>
    <type>Text</type>
</CustomField>