force-app/main/default/objects/DID__c/fields/Transfer_Call__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Call__c</fullName>
    <formula>POC__c &lt;&gt; Destination_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer Call</label>
    <type>Checkbox</type>
</CustomField>