force-app/main/default/objects/DID__c/fields/User_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Address</label>
    <referenceTo>User_Address__c</referenceTo>
    <relationshipLabel>DIDs</relationshipLabel>
    <relationshipName>DIDs</relationshipName>
    <type>Lookup</type>
</CustomField>